test/spec_vectors/func/fail/module_33.wat
(module (func $type-value-nums-vs-void (i32.const 0) (i64.const 0)))